namespace CourseworkApp;
using CourseworkApp.Views;
public partial class AppShell : Shell
{
	public AppShell()
	{
		InitializeComponent();
	}
}
