namespace CourseworkApp.Views;

public partial class DataScientist : ContentPage
{
	public DataScientist()
	{
		InitializeComponent();
	}
}