namespace CourseworkApp.Views;

public partial class OperationsManager : ContentPage
{
	public OperationsManager()
	{
		InitializeComponent();
	}
}